--- a/requirements.txt
+++ b/requirements.txt
@@ -15,16 +15,21 @@ django-debug-toolbar==4.4.6
 django-redis==5.4.0
 django-timezone-field==7.0
 djangorestframework==3.15.2
+flower==2.0.1
+humanize==4.10.0
 kombu==5.3.7
+prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psycopg2==2.9.9
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
 redis==5.0.7
 six==1.16.0
 sqlparse==0.5.1
 times==0.7
+tornado==6.4.1
 types-python-dateutil==2.9.0.20240316
 tzdata==2024.1
 vine==5.1.0
