--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 cron-descriptor==1.4.3
+diff-match-patch==20230430
 Django==5.0.7
 django-celery-beat==2.6.0
 django-debug-toolbar==4.4.6
+django-import-export==4.1.1
 django-redis==5.4.0
 django-timezone-field==7.0
 djangorestframework==3.15.2
@@ -28,6 +30,7 @@ pytz==2024.1
 redis==5.0.7
 six==1.16.0
 sqlparse==0.5.1
+tablib==3.5.0
 times==0.7
 tornado==6.4.1
 types-python-dateutil==2.9.0.20240316
