--- a/requirements.txt
+++ b/requirements.txt
@@ -16,20 +16,26 @@ django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
 django-import-export==4.1.1
 django-redis==5.4.0
+django-rest-passwordreset==1.4.1
 django-rq==2.10.2
 django-timezone-field==7.0
 djangorestframework==3.15.2
+drf-yasg==1.21.7
 flower==2.0.1
 freezegun==1.5.1
 humanize==4.10.0
+inflection==0.5.1
 kombu==5.3.7
+packaging==24.1
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psycopg2==2.9.9
+PyJWT==2.9.0
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.2
 redis==5.0.7
 rq==1.16.2
 rq-scheduler==0.13.1
@@ -42,5 +48,6 @@ tornado==6.4.1
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.12.2
 tzdata==2024.1
+uritemplate==4.1.1
 vine==5.1.0
 wcwidth==0.2.13
