--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-rest-passwordreset==1.4.1
 django-rq==2.10.2
 django-timezone-field==7.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 flower==2.0.1
 freezegun==1.5.1
