--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 flower==2.0.1
 freezegun==1.5.1
+git-filter-repo==2.45.0
 humanize==4.10.0
 inflection==0.5.1
 kombu==5.3.7
