--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+coverage==7.6.1
 cron-descriptor==1.4.3
 crontab==1.0.1
 diff-match-patch==20230430
@@ -16,7 +17,7 @@ django-cors-headers==4.4.0
 django-debug-toolbar==4.4.6
 django-import-export==4.1.1
 django-redis==5.4.0
-django-rest-passwordreset==1.4.1
+django-rest-passwordreset==1.4.2
 django-rq==2.10.2
 django-timezone-field==7.0
 djangorestframework==3.15.2
